--- a/Downloads/product-preview-card-component-main/style.css
+++ b/Downloads/product-preview-card-component-main/style.css
@@ -16,6 +16,9 @@ body {
       border-radius: 0.5em;
       box-shadow: 2px 3px 7px 2px rgb(0 0 0 / 2%);
       display: flex;
+      flex-direction: row;
+      overflow: visible;
+      max-height: 80%;
       overflow: visible;
 }
 
@@ -26,7 +29,7 @@ body {
       display: none;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1100px) {
       .card {
             margin: 2% 2%;
             flex-wrap: wrap;
@@ -50,9 +53,8 @@ body {
 .col {
       display: flex;
       width: 100%;
-      overflow: visible;
+      max-height: 100%;
       flex-direction: column;
-      float: left;
 }
 
 img {
@@ -72,7 +74,7 @@ button {
       background-color: hsl(158, 36%, 37%);
       border: none;
       border-radius: 10px;
-      margin: 1em 0 1em 0;
+      margin: 3% 0;
       cursor: pointer;
 }
 
@@ -82,7 +84,7 @@ button:hover {
 }
 
 #col2 {
-      padding: 1.5rem 2rem;
+      padding: 4%;
 }
 
 span {
@@ -90,17 +92,21 @@ span {
       color: hsl(158, 36%, 37%);
       font-family: 'Fraunces', sans-serif;
       font-weight: 700;
+      
 }
 
 h1 {
       font-family: 'Fraunces', sans-serif;
-      font-size: 50px;
+      font-size: 40px;
       font-weight: 700;
       line-height: 1;
+      margin-top: 2%;
+      margin-bottom: 2%;
 }
 h3{
       font-weight: 500;
       font-stretch:extra-expanded;
+      margin-bottom: 1%;
 }
 
 .icon-cart {
@@ -111,7 +117,7 @@ h3{
       background-size: contain;
       background-repeat: no-repeat;
       vertical-align: middle;
-      margin-right: 2.5px;
+      margin-right: 2%;
 }
 
 p {
@@ -119,4 +125,5 @@ p {
       font-weight: 500;
       line-height: 1.5;
       font-size: 18px;
+      margin: 2% 0;
 }
