--- a/Desktop/ListaDeTareas1/task-list/src/app/componentes/task-item/task-item.component.html
+++ b/Desktop/ListaDeTareas1/task-list/src/app/componentes/task-item/task-item.component.html
@@ -1,5 +1,8 @@
 <div class="task">
-      <h3>{{task.text}}</h3>
+      <h3>{{task.text}} <i 
+            class="bi-x"
+            [ngStyle]="{'color':'red'}"
+            ></i></h3>
       <p>{{task.day}}</p>
-      
+
 </div>
