--- a/Desktop/ListaDeTareas1/task-list/src/app/componentes/task-item/task-item.component.html
+++ b/Desktop/ListaDeTareas1/task-list/src/app/componentes/task-item/task-item.component.html
@@ -1,7 +1,11 @@
-<div class="task">
+<div class="task"
+      [ngClass]="{reminder:task.reminder}"
+      (click)="onToggle(task)"     
+>
       <h3>{{task.text}} <i 
             class="bi-x"
             [ngStyle]="{'color':'red'}"
+            (click)="onDelete(task)"
             ></i></h3>
       <p>{{task.day}}</p>
 
