--- a/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/proyectos/proyectos.component.css
+++ b/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/proyectos/proyectos.component.css
@@ -1,76 +1,86 @@
-/*button{
-    cursor: pointer;
-    background: #58a19d;
-    border-radius: 10px;
-    padding: 0.5rem 1.5rem;
-    border: 0px solid #fbe2f1;
-    font-size: 16px;
-    font-weight: 700;
-    color: white;
-}*/
-button {
-    display: inline-block;
-    padding: 8px 22px;
-    border: 2px solid #dd8efcbb;
-    border-radius: 4px;
-    transition: all 0.2s ease-in;
-    position: relative;
-    overflow: hidden;
-    font-size: 19px;
-    color: rgb(43, 43, 43);
-    z-index: 1;
-    background-color: rgba(255, 255, 255, 15%);
-   }
-   
-   button:before {
-    content: "";
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%) scaleY(1) scaleX(1.25);
-    top: 100%;
-    width: 140%;
-    height: 180%;
-    background-color: rgba(255, 255, 255, 0.993);
-    border-radius: 50%;
-    display: block;
-    transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
-    z-index: -1;
-   }
-   
-   button:after {
-    content: "";
-    position: absolute;
-    left: 55%;
-    transform: translateX(-50%) scaleY(1) scaleX(1.45);
-    top: 180%;
-    width: 160%;
-    height: 190%;
-    background-color: #d078e6;
-    border-radius: 50%;
-    display: block;
-    transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
-    z-index: -1;
-   }
-   
-   button:hover {
-    color: #ffffff;
-    border: 1px solid #252727;
-   }
-   
-   button:hover:before {
-    top: -35%;
-    background-color: #1b1b1b;
-    transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
-   }
-   
-   button:hover:after {
-    top: -45%;
-    background-color: #1d1e1f;
-    transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
-   }
+li {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+}
 
-   @media (max-width:1200) {
-    button{
-        padding: 4px 15px;
-       }
-   }
+a {
+      text-decoration: none;
+      color: white;
+}
+
+
+.contenedor-proyectos {
+      padding: 2px 0;
+      height: 76vh;
+      overflow-y: scroll;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+
+}
+
+.contenedor-proyectos::-webkit-scrollbar {
+      display: none;
+}
+
+.caja-tarjeta {
+      border-radius: 5px;
+      border: 1px solid #b2b2b2;
+      background-position: center center;
+      background-size: cover;
+}
+
+.tarjeta-de-proyecto {
+      width: inherit;
+      height: 250px;
+      padding: 15px;
+      border-radius: 5px;
+      display: flex;
+      justify-content: space-between;
+      background: linear-gradient(0deg, rgb(0 0 0 / 53%) 0%, rgb(0 0 0 / 49%) 51%, rgb(0 0 0 / 67%) 100%);
+}
+
+.tarjeta-pie {
+      display: flex;
+}
+
+.boton-tarjeta {
+      width: 100px;
+      background-color: #ff7f5000;
+      border: none;
+}
+
+
+.descripcion-tarjeta {
+      margin-bottom: 0;
+}
+
+.cabeza-tarjeta {
+
+      grid-template-columns: 1fr 1fr;
+      display: grid;
+      gap: 15px;
+      padding: 15px;
+      border-bottom: 1px solid;
+      align-items: center;
+
+}
+
+.cabeza-tarjeta h2 {
+      margin-bottom: 0;
+}
+
+.contenedor-iconos {
+      text-align: end;
+      color: rgb(245, 245, 245);
+      text-decoration: none;
+}
+
+@media screen and (max-width: 900px) {
+
+      .contenedor-proyectos {
+            height: 89vh;
+      }
+
+}
