--- a/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/educacion/educacion.component.html
+++ b/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/educacion/educacion.component.html
@@ -1,47 +1,31 @@
-<!--tarjeta experiencia-->
-<div class="card" style="width: 100%; height: max-content;" id="Inicio" >
-  <div class="card-body">
-    <!--cabecera de la tarjeta-->
-    <div class="row justify-content-start">
-      <div class="col-4" id="col-titulo">
-        <h2 class="card-title text-start" id="Nombre">
-          Educación
-        </h2>
-      </div>
-      <div class="col-8" id="col-btn">
-        <!--boton de lapiz-->
-        <a type="" class="" *ngIf="generalService.vistabtn">
-          <i class="bi bi-pencil lapiz" id="btn-edicion" data-bs-toggle="modal" data-bs-target="#staticBackdrop0"></i>
-          <i class="bi bi-trash2" id="btn-edicion" data-bs-toggle="modal" data-bs-target="#staticBackdrop1"></i>
-          <i class="bi bi-plus" id="btn-edicion" data-bs-toggle="modal" data-bs-target="#staticBackdrop3"></i>
-        </a>
-      </div>
+<!--tarjeta educacion-->
+  <div class="card-cabeza">
+    <div class="" id="">
+      <h2 class="" id="">
+        Educacion
+      </h2>
     </div>
-    <!--cuerpo de la tarjeta-->
-    <div class="container text-center">
-      <div class="row row-cols-2">
-        <!--columna1-->
-        <div class="col" *ngFor="let educacion of educacionList">
-          <li name="caja-1">
-            <div class="card-encabezado d-flex">
-              <img [src]="educacion.img" alt="">
-              <h3>{{educacion.titulo}}</h3>
-            </div>
-            <div class="card-cuerpo">
-              <p>{{educacion.fechaIni}} - {{educacion.fechaFin}}</p>
-              <p>{{educacion.descripcion}}</p>
-            </div>
-          </li>
-        </div>
-       
-      </div>
-      <!--pie de la tarjeta flecha para abajo-->
-      <a routerLink="/experiencia" class="btn btn-sm d-flex justify-content-center">
-        <i class="bi bi-chevron-compact-down"></i>
+    <div class="" id="col-btn">
+      <!--boton de lapiz-->
+      <a type="" class="" *ngIf="generalService.vistabtn">
+        <i class="bi bi-pencil lapiz" id="btn-edicion" data-bs-toggle="modal" data-bs-target="#staticBackdrop0"></i>
+        <i class="bi bi-trash2" id="btn-edicion" data-bs-toggle="modal" data-bs-target="#staticBackdrop1"></i>
+        <i class="bi bi-plus" id="btn-edicion" data-bs-toggle="modal" data-bs-target="#staticBackdrop3"></i>
       </a>
     </div>
   </div>
-</div>
+  <ul class="lista-skills" *ngFor="let educacion of educacionList">
+    <li class="items-card">
+        <div class="content-img">
+          <img [src]="educacion?.img" alt="" class="img-list">
+        </div>
+        <div class="card-cuerpo">
+          <h3 class="titulo-edu">{{educacion.titulo}}</h3>
+          <p>{{educacion?.fechaIni}} - {{educacion?.fechaFin}}</p>
+          <p>{{educacion?.descripcion}}</p>
+        </div>
+    </li>
+  </ul>
 
 <!--Modal de edicion-->
 <div class="modal fade" id="staticBackdrop0" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
@@ -53,31 +37,28 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form [formGroup]="formulario">
-          <select class="form-control" formControlName="id" aria-label="Default select example">
-            <option selected>ID</option>
-            <option value="1">Uno</option>
-            <option value="2">Dos</option>
-            <option value="3">Tres</option>
-            <option value="4">Cuatro</option>
+        <form [formGroup]="formulario" (submit)="editarEducacion()">
+          <label for="exampleFormControlInput1"class="form-label">ID</label>
+          <select class="form-control" id="select-id" (change)="mostrarDatos()" formControlName="id" aria-label="Default select example" >
+            <option *ngFor="let educacion of educacionList" [value]="educacion.id">{{educacion.titulo}}</option>
           </select>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Icono</label>
-            <input type="email" class="form-control" formControlName="imagen" id="exampleFormControlInput1"
-              placeholder="">
+            <input type="text" class="form-control" formControlName="img" id="exampleFormControlInput1"
+             >
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Titulo</label>
-            <input type="email" class="form-control" formControlName="titulo" id="exampleFormControlInput1"
-              placeholder="">
+            <input type="text" class="form-control"  formControlName="titulo" id="exampleFormControlInput1"
+            >
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Fecha de Inicio</label>
-            <input type="date" class="form-control" formControlName="fechaDeInicio" id="exampleFormControlInput1">
+            <input type="number" class="form-control"  formControlName="fechaIni" id="exampleFormControlInput1">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Fecha de finalizacion</label>
-            <input type="date" class="form-control" formControlName="fechaDeFinal" id="exampleFormControlInput1">
+            <input type="number" class="form-control"  formControlName="fechaFin" id="exampleFormControlInput1">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label">Descripción</label>
@@ -86,7 +67,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-            <button type="submit" class="btn btn-primary">Guardar cambios</button>
+            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Guardar cambios</button>
           </div>
         </form>
       </div>
@@ -104,19 +85,16 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form action="">
-          <select class="form-select" aria-label="Default select example">
-            <option selected>ID</option>
-            <option value="1">Uno</option>
-            <option value="2">Dos</option>
-            <option value="3">Tres</option>
-            <option value="4">Cuatro</option>
+        <form [formGroup]="formulario" (submit)="eliminarEducacion()">
+          <label for="exampleFormControlInput1"class="form-label">ID</label>
+          <select class="form-control" formControlName="id" aria-label="Default select example" >
+            <option *ngFor="let educacion of educacionList" [value]="educacion.id">{{educacion.titulo}}</option>
           </select>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Eliminar educación</button>
+          </div>
         </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Guardar cambios</button>
       </div>
     </div>
   </div>
@@ -132,10 +110,10 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form [formGroup]="formulario">
+        <form [formGroup]="formulario" (ngSubmit)="agregarEducacion()">
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Icono</label>
-            <input type="email" class="form-control" formControlName="imagen" id="exampleFormControlInput1"
+            <input type="email" class="form-control" formControlName="img" id="exampleFormControlInput1"
               placeholder="">
           </div>
           <div class="mb-3">
@@ -145,11 +123,11 @@
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Fecha de Inicio</label>
-            <input type="date" class="form-control" formControlName="fechaDeInicio" id="exampleFormControlInput1">
+            <input type="number" class="form-control" formControlName="fechaIni" id="exampleFormControlInput1">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Fecha de finalizacion</label>
-            <input type="date" class="form-control" formControlName="fechaDeFinal" id="exampleFormControlInput1">
+            <input type="number" class="form-control" formControlName="fechaFin" id="exampleFormControlInput1">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label">Descripción</label>
@@ -158,7 +136,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-            <button type="submit" class="btn btn-primary">Guardar nuevo</button>
+            <button type="submit" class="btn btn-primary"data-bs-dismiss="modal">Guardar nuevo</button>
           </div>
         </form>
       </div>
