--- a/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/experiencia/experiencia.component.css
+++ b/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/experiencia/experiencia.component.css
@@ -1,35 +1,8 @@
-.card-encabezado{
-    display: flex!important;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
-}
-h3{
-    width: 100%;
-    text-align: start;
-}
-.col{
-    display: flex;
-    justify-content: center;
-}
-#col-titulo{
-    display: flex;
-    justify-content: flex-start ;
-}
-
-.card-cuerpo{
-    text-align: start;
+.titulo-exp{
+      font-size: 14px;
 }
 
 p{
-    margin-bottom: 0;
-}
-
-img{
-    width: 15%;
-}
-@media (max-width: 400px) {
-    h3{
-        font-size: 1.5em;
-    }
+      font-size: 12px;
+      font-weight: 400;
 }
