--- a/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/experiencia/experiencia.component.html
+++ b/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/experiencia/experiencia.component.html
@@ -1,45 +1,34 @@
- <!--SECCION DE EXPERIENCIA-->
- <div class="card" id="exp" style="width: 100%; height: max-content;" id="Inicio">
-    <div class="card-body">
-      <!--cabecera de la tarjeta-->
-      <div class="row justify-content-start">
-        <div class="col-4" id="col-titulo">
-          <h2 class="card-title text-center" id="Nombre">
-            Experiencia
-          </h2>
-        </div>
-        <div class="col-8" id="col-btn">
-          <!--boton de lapiz-->
-          <a type="" class=""  *ngIf="generalService.vistabtn" >
-            <i class="bi bi-pencil lapiz" id="btn-edicion" data-bs-toggle="modal" data-bs-target="#editarexp"></i>
-            <i class="bi bi-trash2" id="btn-edicion" data-bs-toggle="modal" data-bs-target="#eliminarexp"></i>
-            <i class="bi bi-plus" id="btn-edicion" data-bs-toggle="modal" data-bs-target="#agregarexp"></i>
-          </a>
-        </div>
-      </div>
-      <!--cuerpo de la tarjeta-->
-      <div class="container text-center">
-        <div class="row row-cols-2">
-          <div class="col" *ngFor="let experiencia of experienciaList">
-            <li name="caja-1">
-              <div class="card-encabezado d-flex">
-                <img [src]="experiencia.img" alt="">
-                <h3>{{experiencia.titulo}}</h3>
-              </div>
-              <div class="card-cuerpo">
-                <p> <time>{{experiencia.fechaIni}}</time> - <time>{{experiencia.fechaFin}}</time></p>
-                <p>{{experiencia.descripcion}}</p>
-              </div>
-            </li>
-          </div>
-        </div>
-      </div>
-      <!--pie de la tarjeta-->
-      <a routerLink="/skills" class="btn btn-sm d-flex justify-content-center">
-        <i class="bi bi-chevron-compact-down"></i>
+<!--SECCION DE EXPERIENCIA-->
+<div class="textos" id="experiencia">
+  <div class="card-cabeza">
+    <div class="" id="">
+      <h2 class="" id="">
+        Experiencia
+      </h2>
+    </div>
+    <div class="" id="col-btn">
+      <!--boton de lapiz-->
+      <a type="" class="" *ngIf="generalService.vistabtn">
+        <i class="bi bi-pencil lapiz" id="btn-edicion" data-bs-toggle="modal" data-bs-target="#editarexp"></i>
+        <i class="bi bi-trash2" id="btn-edicion" data-bs-toggle="modal" data-bs-target="#eliminarexp"></i>
+        <i class="bi bi-plus" id="btn-edicion" data-bs-toggle="modal" data-bs-target="#agregarexp"></i>
       </a>
     </div>
+  </div>
+  <ul class="lista-skills" *ngFor="let experiencia of experienciaList">
+    <li class="items-card">
+      <div class="content-img">
+        <img [src]="experiencia.img" alt="" class="img-list">
+      </div>
+      <div class="card-cuerpo">
+        <h3 class="titulo-exp">{{experiencia.titulo}}</h3>
+        <p> <time>{{experiencia.fechaIni}}</time> - <time>{{experiencia.fechaFin}}</time></p>
+        <p>{{experiencia.descripcion}}</p>
+      </div>
+    </li>
+  </ul>
 </div>
+
 
 <!--Modal de edicion-->
 <div class="modal fade" id="editarexp" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
@@ -52,30 +41,26 @@
       </div>
       <div class="modal-body">
         <form [formGroup]="formulario" (submit)="editarExperiencia()">
+          <label for="exampleFormControlInput1" class="form-label">ID</label>
           <select class="form-control" formControlName="id" aria-label="Default select example">
-            <option selected>ID</option>
-            <option value="1">Uno</option>
-            <option value="2">Dos</option>
-            <option value="3">Tres</option>
-            <option value="4">Cuatro</option>
+            <option *ngFor="let experiencia of experienciaList" [value]="experiencia.id">{{experiencia.titulo}}</option>
           </select>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Icono</label>
-            <input type="email" class="form-control" formControlName="imagen" id="exampleFormControlInput1"
-              placeholder="">
+            <input type="text" class="form-control" formControlName="img" id="exampleFormControlInput1" placeholder="">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Titulo</label>
-            <input type="email" class="form-control" formControlName="titulo" id="exampleFormControlInput1"
+            <input type="text" class="form-control" formControlName="titulo" id="exampleFormControlInput1"
               placeholder="">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Fecha de Inicio</label>
-            <input type="date" class="form-control" formControlName="fechaDeInicio" id="exampleFormControlInput1">
+            <input type="number" class="form-control" formControlName="fechaIni" id="exampleFormControlInput1">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Fecha de finalizacion</label>
-            <input type="date" class="form-control" formControlName="fechaDeFinal" id="exampleFormControlInput1">
+            <input type="number" class="form-control" formControlName="fechaFin" id="exampleFormControlInput1">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label">Descripción</label>
@@ -84,7 +69,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-            <button type="submit" class="btn btn-primary">Guardar cambios</button>
+            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Guardar cambios</button>
           </div>
         </form>
       </div>
@@ -93,7 +78,8 @@
 </div>
 
 <!--Modal para eliminar-->
-<div class="modal fade" id="eliminarexp" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade" id="eliminarexp" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+  aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
@@ -101,19 +87,16 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form action="">
-          <select class="form-select" aria-label="Default select example">
-            <option selected>ID</option>
-            <option value="1">Uno</option>
-            <option value="2">Dos</option>
-            <option value="3">Tres</option>
-            <option value="4">Cuatro</option>
+        <form [formGroup]="formulario" (submit)="eliminarExperiencia()">
+          <label for="exampleFormControlInput1" class="form-label">ID</label>
+          <select class="form-control" formControlName="id" aria-label="Default select example">
+            <option *ngFor="let experiencia of experienciaList" [value]="experiencia.id">{{experiencia.titulo}}</option>
           </select>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Eliminar experiencia</button>
+          </div>
         </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Guardar cambios</button>
       </div>
     </div>
   </div>
@@ -129,31 +112,23 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form [formGroup]="formulario" (submit)="editarExperiencia()">
-          <select class="form-control" formControlName="id" aria-label="Default select example">
-            <option selected>ID</option>
-            <option value="1">Uno</option>
-            <option value="2">Dos</option>
-            <option value="3">Tres</option>
-            <option value="4">Cuatro</option>
-          </select>
+        <form [formGroup]="formulario" (submit)="agregarExperiencia()">
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Icono</label>
-            <input type="email" class="form-control" formControlName="imagen" id="exampleFormControlInput1"
-              placeholder="">
+            <input type="text" class="form-control" formControlName="img" id="exampleFormControlInput1" placeholder="">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Titulo</label>
-            <input type="email" class="form-control" formControlName="titulo" id="exampleFormControlInput1"
+            <input type="text" class="form-control" formControlName="titulo" id="exampleFormControlInput1"
               placeholder="">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Fecha de Inicio</label>
-            <input type="date" class="form-control" formControlName="fechaDeInicio" id="exampleFormControlInput1">
+            <input type="number" class="form-control" formControlName="fechaIni" id="exampleFormControlInput1">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Fecha de finalizacion</label>
-            <input type="date" class="form-control" formControlName="fechaDeFinal" id="exampleFormControlInput1">
+            <input type="number" class="form-control" formControlName="fechaFin" id="exampleFormControlInput1">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label">Descripción</label>
@@ -162,7 +137,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-            <button type="submit" class="btn btn-primary">Guardar cambios</button>
+            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Agregar</button>
           </div>
         </form>
       </div>
