--- a/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/nav/nav.component.css
+++ b/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/nav/nav.component.css
@@ -1,5 +1,5 @@
 #fondo{
-    background-color: rgba(29, 29, 29, 0.979);
+    background-color: rgba(29, 29, 29, 0.541);
 }
 #offcanvasDarkNavbar{
     background-color: rgba(29, 29, 29, 0.979);
@@ -10,14 +10,35 @@
 a span{
     font-size: 14px;
 }
+.navbar-toggler:focus{
+    box-shadow: none;
+}
+
+.navbar-toggler:hover{
+    border: 1px solid;
+}
+
+.navbar-toggler{
+    color: rgb(250, 250, 250); 
+    font-size: smaller; 
+    width: 50px; 
+    border: none;
+}
 i{
     color: aliceblue;
 }
 .login{
     background-color: rgb(71, 132, 245);
+    margin-bottom: 15px;
 }
 button i{
     background-color: none;
+}
+.redes{
+    background-color: #f0f8ff00;
+    border: none;
+    width: 15%;
+
 }
 #iniciar{
     display: block;
@@ -39,4 +60,12 @@ button i{
     width: 50px;
     height: 50px;
     background-color: rgb(18, 18, 22);
+}
+
+.container-fluid{
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
 }
