--- a/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/skills/skills.component.css
+++ b/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/skills/skills.component.css
@@ -1,33 +1,10 @@
-.progress-circle {
-    position: relative;
-    width: 200px;
-    height: 200px;
-    margin: 0 auto;
-  }
-  
-  .background-circle {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    border: solid 10px #ddd;
-  }
-  
-  .progress-bar1 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    border: solid 10px #78C000;
-    transform: rotate(-90deg);
-    transform-origin: center;
-    clip: rect(0, 100%, 100%, 50%);
-  }
-  
-  h3{
-    font-size: 20px;
-  }
+.titulo-skills{
+      font-size: smaller; 
+}
+
+.content-titulo-barra{
+      display: flex;
+      flex-direction: column;
+      padding: 10px 0px 10px 10px;;
+      width: 92%;
+}
