--- a/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/skills/skills.component.html
+++ b/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/skills/skills.component.html
@@ -1,35 +1,34 @@
-<div class="card BarraSkills" id="Inicio" style="width: 100%; height: max-content;">
-  <div class="card-body">
-    <div class="row justify-content-start">
-      <div class="col-4 " id="col-titulo">
-        <h2 class="card-title" id="Nombre">
-          Skills
-        </h2>
-      </div>
-      <div class="col-8" id="col-btn">
-        <!--boton de lapiz-->
-        <a type="" class=""  *ngIf="generalService.vistabtn">
-          <i class="bi bi-pencil lapiz" id="btn-edicion" data-bs-toggle="modal" data-bs-target="#editarskills"></i>
-          <i class="bi bi-trash2" id="btn-edicion" data-bs-toggle="modal" data-bs-target="#eliminarskills"></i>
-          <i class="bi bi-plus" id="btn-edicion" data-bs-toggle="modal" data-bs-target="#agregarskills"></i>
-
-        </a>
-      </div>
-    </div>
-    <!--Barra de progreso-->
-    <li *ngFor="let skills of skillsList" >
-      <img [src]="skills.img" alt="">
-      <h3>{{skills.titulo}}</h3>
-      <p>{{skills.porcentaje}}</p>
-      <div class="progress">
-        <div class="progress-bar progress-bar-striped" role="progressbar" aria-label="Default striped example"
-          [style.width.%]="skills.porcentaje" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-      </div>
-    </li>
-    <a routerLink="/proyectos" class="btn btn-sm d-flex justify-content-center">
-      <i class="bi bi-chevron-compact-down"></i>
+<div class="card-cabeza" id="skills">
+  <div class="" id="">
+    <h2 class="" id="">
+      Hard Skills & Soft Skills
+    </h2>
+  </div>
+  <div class="" id="col-btn">
+    <!--boton de lapiz-->
+    <a type="" class="" *ngIf="generalService.vistabtn">
+      <i class="bi bi-pencil lapiz" id="btn-edicion" data-bs-toggle="modal" data-bs-target="#editarskills"></i>
+      <i class="bi bi-trash2" id="btn-edicion" data-bs-toggle="modal" data-bs-target="#eliminarskills"></i>
+      <i class="bi bi-plus" id="btn-edicion" data-bs-toggle="modal" data-bs-target="#agregarskills"></i>
     </a>
   </div>
+</div>
+<div class="textos">
+  <ul class="lista-skills" *ngFor="let skills of skillsList">
+    <!--Barra de progreso-->
+    <li class="items-card">
+      <div class="content-img">
+        <img [src]="skills.img" class="img-list" alt="">
+      </div>
+      <div class="content-titulo-barra">
+        <h3 class="titulo-skills">{{skills.titulo}}</h3>      
+        <div class="progress">
+        <div class="progress-bar progress-bar-striped" role="progressbar" aria-label="Default striped example"
+          [style.width.%]="skills.porcentaje" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"><p style="margin: 0;">{{skills.porcentaje}}%</p></div>
+        </div>
+      </div>
+    </li>
+  </ul>
 </div>
 
 <!--Modal de edicion-->
@@ -43,26 +42,27 @@
       </div>
       <div class="modal-body">
         <form [formGroup]="formulario" (submit)="editarSkills()">
+          <label for="exampleFormControlInput1" class="form-label">ID</label>
           <select class="form-control" formControlName="id" aria-label="Default select example">
-            <option selected>ID</option>
-            <option value="1">Uno</option>
-            <option value="2">Dos</option>
-            <option value="3">Tres</option>
-            <option value="4">Cuatro</option>
+            <option *ngFor="let skills of skillsList" [value]="skills.id">{{skills.titulo}}</option>
           </select>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Icono</label>
-            <input type="email" class="form-control" formControlName="imagen" id="exampleFormControlInput1"
-              placeholder="">
+            <input type="text" class="form-control" formControlName="img" id="exampleFormControlInput1" placeholder="">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Titulo</label>
-            <input type="email" class="form-control" formControlName="titulo" id="exampleFormControlInput1"
+            <input type="text" class="form-control" formControlName="titulo" id="exampleFormControlInput1"
               placeholder="">
-          </div>         
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">porcentaje</label>
+            <input type="number" class="form-control" formControlName="porcentaje" id="exampleFormControlInput1"
+              placeholder="">
+          </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-            <button type="submit" class="btn btn-primary">Guardar cambios</button>
+            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Guardar cambios</button>
           </div>
         </form>
       </div>
@@ -80,18 +80,16 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form action="">
-          <select class="form-select" aria-label="Default select example">
-            <option selected>ID</option>
-            <option value="1">Uno</option>
-            <option value="2">Dos</option>
-            <option value="3">Tres</option>
+        <form [formGroup]="formulario" (submit)="eliminarSkills()">
+          <label for="exampleFormControlInput1" class="form-label">ID</label>
+          <select class="form-control" formControlName="id" aria-label="Default select example">
+            <option *ngFor="let skills of skillsList" [value]="skills.id">{{skills.titulo}}</option>
           </select>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Guardar cambios</button>
+          </div>
         </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Guardar cambios</button>
       </div>
     </div>
   </div>
@@ -107,27 +105,24 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form [formGroup]="formulario" (submit)="editarSkills()">
-          <select class="form-control" formControlName="id" aria-label="Default select example">
-            <option selected>ID</option>
-            <option value="1">Uno</option>
-            <option value="2">Dos</option>
-            <option value="3">Tres</option>
-            <option value="4">Cuatro</option>
-          </select>
+        <form [formGroup]="formulario" (submit)="agregarSkills()">
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Icono</label>
-            <input type="email" class="form-control" formControlName="imagen" id="exampleFormControlInput1"
-              placeholder="">
+            <input type="text" class="form-control" formControlName="img" id="exampleFormControlInput1" placeholder="">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Titulo</label>
-            <input type="email" class="form-control" formControlName="titulo" id="exampleFormControlInput1"
+            <input type="text" class="form-control" formControlName="titulo" id="exampleFormControlInput1"
               placeholder="">
-          </div>         
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">porcentaje</label>
+            <input type="number" class="form-control" formControlName="porcentaje" id="exampleFormControlInput1"
+              placeholder="">
+          </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-            <button type="submit" class="btn btn-primary">Guardar cambios</button>
+            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Guardar cambios</button>
           </div>
         </form>
       </div>
