--- a/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/experiencia/experiencia.component.html
+++ b/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/experiencia/experiencia.component.html
@@ -37,12 +37,12 @@
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="staticBackdropLabel">Editar Experiencia</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"(click)="formulario.reset()"></button>
       </div>
       <div class="modal-body">
         <form [formGroup]="formulario" (submit)="editarExperiencia()">
           <label for="exampleFormControlInput1" class="form-label">ID</label>
-          <select class="form-control" formControlName="id" aria-label="Default select example">
+          <select class="form-control" formControlName="id" id="select-idExp" (change)="mostrarDatos()" aria-label="Default select example">
             <option *ngFor="let experiencia of experienciaList" [value]="experiencia.id">{{experiencia.titulo}}</option>
           </select>
           <div class="mb-3">
@@ -68,7 +68,7 @@
               rows="3"></textarea>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"(click)="formulario.reset()">Cerrar</button>
             <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Guardar cambios</button>
           </div>
         </form>
