--- a/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/app.component.html
+++ b/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/app.component.html
@@ -5,27 +5,24 @@
     <div class="contenedor-encabezado">
         <div class="card" style="width: inherit;
         height: 100%;
-        -webkit-box-shadow: inset -14px -14px 45px -14px rgba(84, 109, 107, 1);
-        -moz-box-shadow: inset -14px -14px 45px -14px rgba(84, 109, 107, 1);
-        box-shadow: inset -14px -14px 45px -14px rgba(84, 109, 107, 1);
-
+        box-shadow: 20px 4px 45px -14px rgb(7, 7, 7);
         border: none;">
             <app-encabezado></app-encabezado>
         </div>
     </div>
-    <div class="card card-contenedor">
+    <div class="card-contenedor">
         <app-proyectos class="" style="height:100vh;"></app-proyectos>
     </div>
 </div>
 <div class="espacio"></div>
 <div class="educacion">
-    <div class="card" style="border: solid 1px; background-color: #1b202d; height: fit-content;"><!--/* background-image: url(./img/1.jpg); */-->
+    <div class="" style=" background-color: #1b202d5c; height: fit-content; border-radius: 10px;"><!--/* background-image: url(./img/1.jpg); */-->
         <app-skills></app-skills>
     </div>
-    <div class="card" style="border: solid 1px; background-color: #1b202d; height: fit-content;"><!--/* background-image: url(./img/4.jpg); */-->
+    <div class="" style=" background-color: #1b202d5c; height: fit-content; border-radius: 10px;"><!--/* background-image: url(./img/4.jpg); */-->
         <app-educacion></app-educacion>
     </div>
-    <div class="card" style="border: solid 1px; background-color: #1b202d; height: fit-content;"><!--/* background-image: url(./img/5.jpg); */-->
+    <div class="" style=" background-color: #1b202d5c; height: fit-content; border-radius: 10px;"><!--/* background-image: url(./img/5.jpg); */-->
         <app-experiencia></app-experiencia>
     </div>
 </div>
