--- a/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/nav/nav.component.css
+++ b/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/nav/nav.component.css
@@ -1,8 +1,10 @@
 #fondo{
-    background-color: rgba(29, 29, 29, 0.541);
+    background-color: rgba(0, 0, 0, 0.541);
+    height: 58px;
 }
 #offcanvasDarkNavbar{
-    background-color: rgba(29, 29, 29, 0.979);
+    background-color: rgba(0, 0, 0, 1);
+	background-image: linear-gradient(329deg, rgba(0, 0, 0, 1) 6%, rgba(61, 74, 57, 1) 20%, rgba(67, 75, 107, 1) 40%, rgba(23, 54, 72, 1) 60%, rgba(3, 11, 16, 1) 80%, rgba(0, 0, 0, 1) 100%);
 }
 #offcanvasDarkNavbarLabel{
     color: aliceblue;
