--- a/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/styles.css
+++ b/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/styles.css
@@ -96,7 +96,8 @@ i {
 
 
 .modal-content {
-	background-color: #03151a;
+	background-color: rgba(0, 0, 0, 1);
+	background-image: linear-gradient(329deg, rgba(0, 0, 0, 1) 6%, rgba(61, 74, 57, 1) 20%, rgba(67, 75, 107, 1) 40%, rgba(23, 54, 72, 1) 60%, rgba(3, 11, 16, 1) 80%, rgba(0, 0, 0, 1) 100%);
 }
 
 
@@ -169,8 +170,7 @@ i {
 	/* border: solid 1px; */
 	display: flex;
 	justify-content: center;
-	border-radius: 10px;
-	border: solid 1px;
+	border-radius: 0px;
 	text-align: center;
 	/* padding: 20px; */
 	background-size: cover;
